# write-you-a-haskell

./: .gitignore  .travis.yml  000_introduction.md  001_basics.md  002_parsers.md  003_lambda_calculus.md  004_type_systems.md  005_evaluation.md  006_hindley_milner.md  007_path.md  008_extended_parser.md  009_datatypes.md  010_renamer.md  011_pattern_matching.md  012_systemf.md  026_llvm.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  atom.xml  basics.md  contributing.md  deploy.sh  evaluation.md  hindley_milner.md  includes.hs  index.md  introduction.md  lambda_calculus.md  latex_macros  page.tmpl  parsers.md  path.md  run-tests.sh  stack.yaml  template.html  template.latex  title.md  tutorial.md  (+2 more)
.github/: README.md
chapter10/: .gitkeep  adt.c  adt.hs  adt2.c  eval.c  eval.hs  generics.hs
chapter12/systemf/: Syntax.hs
chapter27/: example.cpp  example.ll
chapter27/cfg/: branch.dot  branch.ll  cbranch.dot  cbranch.ll  for.dot  for.ll  phi.dot  phi.ll  ret.dot  ret.ll  switch.dot  switch.ll
chapter27/dsl/: Codegen.hs  JIT.hs  Main.hs  dsl.cabal
chapter3/: parsec.hs
chapter3/calc/: Eval.hs  Main.hs  Parser.hs  Pretty.hs  README.md  Syntax.hs  calc.cabal
chapter4/: lambda.hs
chapter4/untyped/: Eval.hs  Main.hs  Parser.hs  Pretty.hs  README.md  Syntax.hs  stack.yaml  untyped.cabal
chapter5/calc_typed/: Check.hs  Eval.hs  Main.hs  Parser.hs  Pretty.hs  README.md  Type.hs  arith.cabal
chapter5/stlc/: Check.hs  Eval.hs  Lexer.hs  Main.hs  Parser.hs  Pretty.hs  README.md  Syntax.hs  stlc.cabal
chapter6/: hoas.hs  interp.hs  io.hs  lazy.hs  phoas.hs
chapter7/poly/: Infer.hs  Main.hs  Pretty.hs  README.md  Syntax.hs  Type.hs  poly.cabal  stack.yaml  test.ml
chapter7/poly/src/: Eval.hs  Infer.hs  Main.hs  Parser.hs
chapter7/poly/tests/should_fail/: test_if.ml  test_if.out
chapter7/poly_constraints/: Infer.hs  LICENSE  Pretty.hs  README.md  Syntax.hs  Type.hs  poly.cabal  test.ml
chapter7/poly_constraints/src/: Env.hs  Eval.hs  Infer.hs  Lexer.hs  Main.hs  Parser.hs  Pretty.hs
chapter8/: .gitignore
chapter8/protohaskell/: Compiler.hs  Flags.hs  Frontend.hs  Monad.hs  Name.hs  Pretty.hs  README.md  Type.hs
chapter9/assign/: .gitignore  Eval.hs  Lexer.x  Main.hs  Makefile  Parser.y  README.md  Syntax.hs  assign.cabal  happy.cabal  input.test
chapter9/attoparsec/: Main.hs  simple.ml
chapter9/happy/: Eval.hs  Lexer.x  Main.hs  Makefile  Parser.y  README.md  Syntax.hs  happy.cabal  happyParser.cabal
chapter9/layout/: Layout.hs
chapter9/operators/: Parser.hs  test.fun
chapter9/provenance/: Eval.hs  Infer.hs  Main.hs  Parser.hs  Pretty.hs  Syntax.hs  Type.hs
css/: style.css
img/: Haskell-Logo.ps  kinds.dot  pipeline1.dot  pipeline2.dot  proto.dot  proto_pass.dot  protohaskell.dot  stack.dot
js/: nav.js
misc/: rssgen.py
