name:                write-you-a-haskell
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable write-you-a-haskell
  main-is:             Main.hs
  build-depends:       
    base         >= 4.7 && <4.9,
    pretty       >= 1.1 && <1.2,
    containers   >= 0.5 && <0.6,
    transformers >= 0.3 && <0.5,
    haskeline    >= 0.7 && <0.8,
    pandoc       -any
  build-tools:         alex, happy
  default-language:    Haskell2010
