name:                untyped
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable untyped
  build-depends:       
      base       >= 4.6 && <4.8
    , pretty     >= 1.1 && <1.2
    , parsec     >= 3.1 && <3.2
    , containers >= 0.5 && <0.6
    , haskeline  >= 0.7
    , mtl
    , transformers
  default-language:    Haskell2010
  main-is:             Main.hs
