name:                poly
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable poly
  build-depends:
      base          >= 4.6   && <= 4.9
    , pretty        >= 1.1   &&  < 1.2
    , parsec        >= 3.1   &&  < 3.2
    , text          >= 1.2   &&  < 1.3
    , containers    >= 0.5   &&  < 0.6
    , mtl           >= 2.2   &&  < 2.3
    , transformers  >= 0.4.2 &&  < 0.5
    , repline       >= 0.1.2.0
  default-language:    Haskell2010
  main-is:             Main.hs
