name:                poly
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable poly
  build-depends:
      base
    , pretty
    , parsec
    , text
    , containers
    , mtl
    , transformers
    , repline

  other-modules:
    Env
    Eval
    Infer
    Lexer
    Parser
    Pretty
    Syntax
    Type

  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
