name:                assign
version:             0.1.0.0
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable assign
  build-depends:       
      base       >= 4.6 && <4.9
    , containers >= 0.5 && <0.6
    , mtl        >= 2.2
  default-language:    Haskell2010
  main-is:             Main.hs

  Build-depends:       base, array
  build-tools:         alex, happy
  other-modules:       
    Parser,
    Lexer
